examples/test/testpolicy14371.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14371
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key27: value30
      key36: value4
      key11: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value7
          key21: value42
      podSelector:
        matchLabels:
          key17: value28
          key42: value0
          key25: value34
